--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "style-loader": "^3.3.0",
     "terser-webpack-plugin": "^5.2.4",
     "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-dev-server": "^4.2.1"
+    "webpack-dev-server": "^4.2.1",
+    "webpack-merge": "^5.8.0"
   }
 }
