--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "terser-webpack-plugin": "^5.2.4",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-dev-server": "^4.2.1",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "workbox-webpack-plugin": "^6.3.0"
   }
 }
